added: hindi translations from Google Translate

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,4 +1,9 @@
 {
+  "//": "App",
+  "appName": "DocManager",
+  "home": "Home",
+  "settings": "Settings",
+  "about": "About",
   "//": "Login",
   "getStarted": "Get Started!",
   "enterMobile": "Enter your mobile number",
@@ -12,5 +17,26 @@
   "iAgreeToThe": "I agree to the ",
   "termsOfUse": "Terms of Use",
   "and": " and ",
-  "privacyPolicy": "Privacy Policy"
+  "privacyPolicy": "Privacy Policy",
+  "//": "Settings",
+  "displayNBrightness": "Display & Brightness",
+  "theme": "Theme",
+  "light": "Light",
+  "dark": "Dark",
+  "systemDefault": "System default",
+  "appDefault": "App default",
+  "colorScheme": "Color Scheme",
+  "cardDesign": "Design",
+  "flat": "Flat",
+  "slightCorners": "Slight corners",
+  "round": "Round",
+  "font": "Font",
+  "fontSize": "Font size",
+  "verySmall": "Tiny",
+  "small": "Small",
+  "normal": "Normal",
+  "large": "Large",
+  "veryLarge": "Huge",
+  "languageNInput": "Language & Input",
+  "language": "Language"
 }
