--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -1,1 +1,42 @@
-{}
+{
+  "//": "App",
+  "appName": "डॉ. प्रबंधक",
+  "home": "गृह",
+  "settings": "सेटिंग्स",
+  "about": "बरेमें",
+  "//": "Login",
+  "getStarted": "शुरू हो जाओ!",
+  "enterMobile": "अपना मोबाइल संख्या दर्ज करे",
+  "mobileNumber": "मोबाइल नंबर",
+  "enterMobileDesc": "हम आपको इस नंबर पर सत्यापन कोड के साथ एक एसएमएस भेजेंगे",
+  "sendOtp": "OTP भेजें",
+  "login": "लॉग इन करें",
+  "//": "OTP",
+  "enterVerificationCode": "सत्यापन कोड दर्ज करें",
+  "enterVerificationCodeDesc": "कृपया सत्यापन कोड दर्ज करें जो कि {mobile} पर भेजा गया था",
+  "iAgreeToThe": "मैं इसके लिए सहमत हूँ ",
+  "termsOfUse": "उपयोग की शर्तें",
+  "and": " तथा ",
+  "privacyPolicy": "गोपनीयता नीति",
+  "//": "Settings",
+  "displayNBrightness": "प्रदर्शन और चमक",
+  "theme": "विषय",
+  "light": "रोशनी",
+  "dark": "अंधेरा",
+  "systemDefault": "प्रणालीगत डिफ़ॉल्ट",
+  "appDefault": "ऐप डिफ़ॉल्ट",
+  "colorScheme": "रंग योजना",
+  "cardDesign": "डिज़ाइन",
+  "flat": "समतल",
+  "slightCorners": "थोड़ा कोने",
+  "round": "गोल",
+  "font": "फ़ॉन्ट",
+  "fontSize": "फ़ॉन्ट आकार",
+  "verySmall": "नन्हा",
+  "small": "छोटा",
+  "normal": "साधारण",
+  "large": "बड़ा",
+  "veryLarge": "विशाल",
+  "languageNInput": "भाषा इनपुट",
+  "language": "भाषा"
+}
