added: doc profile screen, elementary changes

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -4,6 +4,9 @@
   "home": "Home",
   "settings": "Settings",
   "about": "About",
+  "//": "Actions",
+  "cancel": "Cancel",
+  "save": "Save",
   "//": "Login",
   "getStarted": "Get Started!",
   "enterMobile": "Enter your mobile number",
@@ -38,5 +41,28 @@
   "large": "Large",
   "veryLarge": "Huge",
   "languageNInput": "Language & Input",
-  "language": "Language"
+  "language": "Language",
+  "//": "Home",
+  "top3Doctors": "Top 3 doctors",
+  "//": "Details",
+  "editProfile": "Edit Profile",
+  "personalDetails": "Personal details",
+  "firstName": "First name",
+  "enterFirstName": "Enter first name",
+  "lastName": "Last name",
+  "enterLastName": "Enter last name",
+  "gender": "Gender",
+  "selectGender": "Select gender",
+  "male": "Male",
+  "female": "Female",
+  "enterMobileNumber": "Enter mobile number",
+  "dateOfBirth": "Date of birth",
+  "selectDateOfBirth": "Select date of birth",
+  "bloodGroup": "Blood group",
+  "selectBloodGroup": "Select blood group",
+  "height": "Height",
+  "enterHeight": "in cm",
+  "weight": "Weight",
+  "enterWeight": "in kg",
+  "unknownExt": "<unknown>"
 }
