--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -4,6 +4,9 @@
   "home": "गृह",
   "settings": "सेटिंग्स",
   "about": "बरेमें",
+  "//": "Actions",
+  "cancel": "रद्द करें",
+  "save": "सहेजें",
   "//": "Login",
   "getStarted": "शुरू हो जाओ!",
   "enterMobile": "अपना मोबाइल संख्या दर्ज करे",
@@ -38,5 +41,28 @@
   "large": "बड़ा",
   "veryLarge": "विशाल",
   "languageNInput": "भाषा इनपुट",
-  "language": "भाषा"
+  "language": "भाषा",
+  "//": "Home",
+  "top3Doctors": "शीर्ष 3 डॉक्टर",
+  "//": "Details",
+  "editProfile": "प्रोफ़ाइल संपादित करें",
+  "personalDetails": "व्यक्तिगत विवरण",
+  "firstName": "पहला नाम",
+  "enterFirstName": "पहला नाम दर्ज करें",
+  "lastName": "उपनाम",
+  "enterLastName": "उपनाम दर्ज करो",
+  "gender": "लिंग",
+  "selectGender": "लिंग चुनें",
+  "male": "पुरुष",
+  "female": "महिला",
+  "enterMobileNumber": "मोबाइल नंबर दर्ज करें",
+  "dateOfBirth": "जन्म की तारीख",
+  "selectDateOfBirth": "जन्म तिथि चुनें",
+  "bloodGroup": "रक्त वर्ग",
+  "selectBloodGroup": "रक्त वर्ग चुनें",
+  "height": "ऊंचाई",
+  "enterHeight": "सेमी. में",
+  "weight": "वज़न",
+  "enterWeight": "किलो. में",
+  "unknownExt": "<अज्ञात>"
 }
