added: local storage, added: image update

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -7,6 +7,7 @@
   "//": "Actions",
   "cancel": "Cancel",
   "save": "Save",
+  "selectOption": "Select an option",
   "//": "Login",
   "getStarted": "Get Started!",
   "enterMobile": "Enter your mobile number",
@@ -45,6 +46,9 @@
   "//": "Home",
   "top3Doctors": "Top 3 doctors",
   "//": "Details",
+  "edit": "Edit",
+  "camera": "Camera",
+  "gallery": "Gallery",
   "editProfile": "Edit Profile",
   "personalDetails": "Personal details",
   "firstName": "First name",
