--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -7,6 +7,7 @@
   "//": "Actions",
   "cancel": "रद्द करें",
   "save": "सहेजें",
+  "selectOption": "एक विकल्प चुनें",
   "//": "Login",
   "getStarted": "शुरू हो जाओ!",
   "enterMobile": "अपना मोबाइल संख्या दर्ज करे",
@@ -45,6 +46,9 @@
   "//": "Home",
   "top3Doctors": "शीर्ष 3 डॉक्टर",
   "//": "Details",
+  "edit": "संपादित करें",
+  "camera": "कैमरा",
+  "gallery": "गेलरी",
   "editProfile": "प्रोफ़ाइल संपादित करें",
   "personalDetails": "व्यक्तिगत विवरण",
   "firstName": "पहला नाम",
